--- a/HTML/4/4.1+Webpages/index.html
+++ b/HTML/4/4.1+Webpages/index.html
@@ -1,4 +1,4 @@
 <h1>Welcome to My Website!</h1>
-<img src="./assets/images/cat.png"/>
+<a href="./public/about.html"><img src="./assets/images/cat.png"/></a>
 <hr />
 <a href="./public/contact.html">Contact Me</a>
